"Add: Fichaje + Fix Pts Equipo. Fix Mercado. Añadir Btns volver + logout en LigaDetalle.jsx Añadir más carreras y resultados para observar comportamiento gráficas"