@@ -10,6 +10,7 @@ import max.fantasyone.repository.PilotoRepository;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class MercadoMapper {
@@ -38,8 +39,18 @@ public class MercadoMapper {
 
     public MercadoResponseDTO toDTO(Mercado mercado) {
         List<PilotoResponseDTO> pilotosDTO = mercado.getPilotosMercado().stream()
-                .map(pilotoMapper::toDTO)
-                .toList();
+                // Primero filtramos aquellos pilotos que no estén fichados:
+                .filter(p -> !p.isFichado())
+                // Después los convertimos a PilotoResponseDTO usando su constructor:
+                .map(p -> new PilotoResponseDTO(
+                        p.getId(),
+                        p.getNombreCompleto(),
+                        p.getPrecio(),
+                        p.getPuntosFantasy(),
+                        p.getImagenUrl(),
+                        p.getExternalId()
+                ))
+                .collect(Collectors.toList());
 
         return new MercadoResponseDTO(
                 mercado.getId(),
